...

    <Button
        android:text="Somar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:id="@+id/buttonSomar"
        android:layout_below="@+id/y"
        android:layout_alignEnd="@+id/y" />

    <Button
        android:text="Subtrair"
        android:layout_width="wrap_content"
...
        android:layout_toStartOf="@+id/buttonMultiplicar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:id="@+id/result"
        android:layout_alignBaseline="@+id/y"
        android:layout_alignBottom="@+id/y"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp" />
</RelativeLayout>

